# wqminer

./: .gitignore  README.md  REFERENCES.md  THIRD_PARTY_NOTICES.md  fetch_fields.py  produce_templates.py  pyproject.toml  requirements.txt  run.py  run_config.example.json  start_web.sh  web_query.py  wq_submitter_single.py
data/cache/: datasets_ASI_1_MINVOL1M.json
docs/: fast_expr_syntax_manual.json  fast_expr_syntax_manual.md  wqb_community_study_2026-03-08.md
infra/supabase/: schema.sql
remote_submitter/: .env.example  Cargo.toml  README.md
remote_submitter/src/: main.rs
skills/wq-openclaw-alpha-optimizer/: SKILL.md
templates/: library.json  sample_templates.json
tests/: test_cli.py  test_config.py  test_fast_expr_syntax.py  test_iterative_generator.py  test_llm_client.py  test_mutator.py  test_scraper.py  test_submitter.py  test_swappable_template_generator.py  test_template_generator.py
wqminer/: __init__.py  cli.py  community_scraper.py  config.py  expression_validator.py  fast_expr_syntax.py  filters.py  inspiration.py  iterative_generator.py  llm_client.py  miner.py  models.py  mutator.py  operator_store.py  playwright_auth.py  producer.py  queue_supabase.py  region_config.py  services.py  storage.py  submitter.py  swappable_template_generator.py  syntax_learning.py  syntax_manual.py  template_generator.py  validate.py  worldquant_client.py
wqminer/constants/: default_fields.json  worker_prompt_compact.md
wqminer/webui/: __init__.py  app.py
wqminer/wqb/: auto_auth_session.py  datetime_range.py  filter_range.py  wqb_session.py  wqb_urls.py
(+16 files in other folders)
