[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wqminer"
version = "0.1.0"
description = "WorldQuant factor miner with LLM template generation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "opener"}
]
dependencies = [
  "requests>=2.31.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0"
]

[project.scripts]
wqminer = "wqminer.cli:main"
wqminer-web = "wqminer.webui.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wqminer*"]

[tool.setuptools.package-data]
"wqminer.constants" = ["*.json"]
"wqminer.webui" = ["static/*.html", "static/*.css", "static/*.js"]
